# COAproject

./: README.md  openapiAuth.yml  openapiPromo.yml
authmanager/: CMakeLists.txt  README.md
authmanager/src/: AuthServiceImpl.cpp  AuthServiceImpl.h  main.cpp  utils.h
docs/: c4diag.puml
docs/authmanager/: er.puml
docs/promoservice/: er.puml
docs/statmanager/: er.puml
gateway/: CMakeLists.txt  README.md
gateway/src/: AuthServiceProxyImpl.cpp  AuthServiceProxyImpl.h  ClickAndCommentService.cpp  ClickAndCommentService.h  KafkaProducer.cpp  KafkaProducer.h  PromoServiceProxyImpl.cpp  PromoServiceProxyImpl.h  main.cpp
gateway/tests/: CMakeLists.txt  KafkaConsumer.cpp  finaltest.cpp  gatewaytest.cpp  hw6.cpp
promoservice/: CMakeLists.txt  PromoServiceImpl.cpp  PromoServiceImpl.h  README.md  dbHelper.cpp  db_helper.cpp  main.cpp
promoservice/tests/: CMakeLists.txt  test_promoservice.cpp
proto/: auth.proto  promo.proto  stat.proto
statmanager/: CMakeLists.txt  README.md  StatServiceProxyImpl.cpp  main.cpp
statmanager/src/: KafkaConsumer.cpp  StatServiceProxyImpl.cpp  main.cpp
